# nahual

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  collect.py  inspect_data.py  main.py  pyproject.toml  requirements-server.txt  train.py
.claude/: launch.json  settings.json  settings.local.json
data/dynamic/letra_j/: 01628bfc-8c92-4454-817a-4d4542d4dad4.npy  0180252d-012c-4ee5-bf03-49026c2fc0fb.npy  044e5aca-3593-4766-87b2-3a613b712a35.npy  04a356ea-7ebb-4228-8eb6-8c39447ac6d3.npy  04a473ad-5c5d-497c-ae4e-b968a8c48655.npy  05e73080-d273-4eeb-9488-eeece31254f3.npy  07027ad5-9cd5-4676-9865-732ebdec8214.npy  075863f8-1e35-40b0-92c7-ff6ece742705.npy  0775c4a4-5b7b-4fe1-ac4b-e6b72e4463d1.npy  08e25bca-ff13-447b-8827-c003959c8d6d.npy  090755b5-0a58-429a-8988-05de6685cfa4.npy  0914eb17-b757-45fb-a048-560c62c6c92d.npy  094d29fa-b5ae-4972-bcaf-656a120c9dae.npy  0aba8602-de41-44ae-9981-c709031d32f1.npy  0bf4764d-5d4a-4808-b8ac-ebd6ca626387.npy  0c04945f-b0ef-4776-9ef3-7ad09a1dd1d7.npy  0ce04d1a-1efd-447a-aca8-b8ecf0d451be.npy  0dcfd36b-f3ab-4fa0-bc90-d8f6d57a076b.npy  0ee1a48e-f797-47da-879a-daa8227da511.npy  0f05743c-6490-46e4-b0f8-bc31c5482fff.npy  (+181 more)
models/: dynamic_gesture_classifier.pkl  gesture_classifier.pkl
nahual/: __init__.py  data_inspector.py  gesture_collector.py  gesture_heuristics.py  gesture_trainer.py  hand_landmarker.py  realtime_session.py  visualization.py
server/: __init__.py  app.py
server/static/: index.html
web/: __init__.py  app.py  requirements.txt
web/static/: app.js  index.html  style.css
(+3245 files in other folders)
